Source/JavaScriptCore/dfg/DFGFixupPhase.cpp
@@ -1461,7 +1461,11 @@ private:
                 fixEdge<OtherUse>(node->child1());
                 node->remove();
             } else if (typeSet->doesTypeConformTo(TypeObject)) {
-                StructureSet set = typeSet->structureSet();
+                StructureSet set;
+                {
+                    ConcurrentJITLocker locker(typeSet->m_lock);
+                    set = typeSet->structureSet(locker);
+                }
                 if (!set.isEmpty()) {
                     fixEdge<CellUse>(node->child1());
                     node->convertToCheckStructure(m_graph.addStructureSet(set));
